Add method requests for adding initial account generation by coin type.
